--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,10 @@
 @import url(./blocks/edit-form/__btn-save/_margin/edit-form__btn-save_margin_low.css);
 @import url(./blocks/edit-form/__error/edit-form__error.css);
 @import url(./blocks/edit-form/__wrapper/edit-form__wrapper.css);
+@import url(./blocks/login-form/login-form.css);
+@import url(./blocks/link/link.css);
+@import url(./blocks/login-form/login-form.css);
+@import url(./blocks/login-form/__title/login-form__title.css);
+@import url(./blocks/login-form/__field/login-form__field.css);
+@import url(./blocks/login-form/__btn/login-form__btn.css);
+@import url(./blocks/login-form/__link/login-form__link.css);
