--- a/src/blocks/login-form/__link/login-form__link.css
+++ b/src/blocks/login-form/__link/login-form__link.css
@@ -8,3 +8,9 @@
   line-height: 1.21;
   margin-top: 15px;
 }
+
+@media screen and (max-width: 425px) {
+  .login-form__link {
+    margin-top: 20px;
+  }
+}
