--- a/src/blocks/login-form/__btn/login-form__btn.css
+++ b/src/blocks/login-form/__btn/login-form__btn.css
@@ -25,3 +25,12 @@
   border: 1px solid #fff;
   cursor: not-allowed;
 }
+
+@media screen and (max-width: 425px) {
+  .login-form__btn {
+    min-height: 46px;
+    font-size: 16px;
+    margin-top: 174px;
+    line-height: 1.19;
+  }
+}
