--- a/src/blocks/login-form/__title/login-form__title.css
+++ b/src/blocks/login-form/__title/login-form__title.css
@@ -6,3 +6,10 @@
   margin-bottom: 46px;
   margin-top: 0;
 }
+
+@media screen and (max-width: 425px) {
+  .login-form__title {
+    font-size: 20px;
+    margin-bottom: 36px;
+  }
+}
