--- a/src/blocks/popup/__warning/popup__warning.css
+++ b/src/blocks/popup/__warning/popup__warning.css
@@ -7,3 +7,11 @@
   max-width: 358px;
   text-align: center;
 }
+
+@media screen and (max-width: 425px) {
+  .popup__warning {
+    font-size: 18px;
+    margin: 40px auto 50px;
+    max-width: 244px;
+  }
+}
